--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-markdown": "^9.0.3",
     "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1",
+    "react-toastify": "^11.0.3",
     "sass": "^1.84.0"
   },
   "scripts": {
