--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "cra-template": "1.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
     "react-markdown": "^9.0.3",
     "react-router-dom": "^7.1.5",
