--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
+    "react-loading-skeleton": "^3.5.0",
     "react-markdown": "^9.0.3",
     "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1",
