--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1",
     "react-toastify": "^11.0.3",
+    "remark-gfm": "^4.0.1",
     "sass": "^1.84.0"
   },
   "scripts": {
