feat: chart.js 및 chartjs-plugin-datalabels 의존성 추가

--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "@tanstack/react-query": "^5.66.6",
     "axios": "^1.7.9",
+    "chart.js": "^4.4.8",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "cra-template": "1.2.0",
     "dayjs": "^1.11.13",
     "react": "^19.0.0",
