--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cra-template": "1.2.0",
     "dayjs": "^1.11.13",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
