--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "chartjs-plugin-datalabels": "^2.2.0",
     "cra-template": "1.2.0",
     "dayjs": "^1.11.13",
+    "framer-motion": "^12.6.3",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
+    "react-intersection-observer": "^9.16.0",
     "react-loading-skeleton": "^3.5.0",
     "react-markdown": "^9.0.3",
     "react-responsive": "^10.0.1",
