--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
           echo "REACT_APP_BASE_URL=${{ secrets.REACT_APP_BASE_URL }}" >> .env
 
       - name: Build React app
-        run: npm run build
+        run: CI=false npm run build
 
       - name: Deploy to S3
         uses: jakejarvis/s3-sync-action@master
